--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-offline": "^3.2.32",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sass": "^2.3.16",
+    "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-typography": "^2.5.13",
     "localforage": "^1.9.0",
     "node-sass": "^4.14.1",
